# tuicr

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RELEASE.md  flake.nix  index.html  install.sh  result
.codex/: flow.json
.direnv/: flake-profile-1-link
.github/workflows/: ci.yml  release.yml
.opencode/: flow.json
ai-specs/: 20260327_1630_auto_export_markdown.md  INDEX.md
docs/: CONFIG.md  KEYBINDINGS.md
docs/decisions/: FEAT-0010 All-Files Pristine View.md  FEAT-0011 Single-File View.md  FEAT-0012 Arrow Navigation.md  FEAT-0013 Mouse Horizontal Scroll Routing.md  FEAT-0014 Folder Expansion.md  FEAT-0015 Click To Focus.md  FEAT-0017 File Separator Box.md
examples/: nightfly.toml
mcp_channel/: channel.ts  package.json
public/: tuicr-demo.cast
scripts/demo/: setup-fixture.sh
skills/tuicr/: SKILL.md  tuicr-wrapper.sh
src/: app.rs  cli.rs  error.rs  external_editor.rs  handler.rs  hash.rs  lib.rs  main.rs  mcp.rs  process.rs  profile.rs  review_api.rs  review_cli.rs  review_service.rs  review_store.rs  slug.rs  terminal_state.rs  text_edit.rs  tuicrignore.rs  update.rs
src/app/: annotations.rs  commits.rs  diff_load.rs  init.rs  mod.rs  modes.rs  navigation.rs  pr.rs  search.rs  session.rs  tree.rs
src/config/: mod.rs
src/forge/: context.rs  mod.rs  pr_open.rs  remote_comments.rs  selector.rs  submit.rs  traits.rs
src/git/: diff.rs  mod.rs  repository.rs
src/ide/: handlers.rs  lockfile.rs  mod.rs  protocol.rs  server.rs  state.rs
src/input/: keybindings.rs  mod.rs  mode.rs
src/mcp_channel/: install.rs  mod.rs  protocol.rs  server.rs
src/model/: comment.rs  diff_types.rs  mod.rs  review.rs
src/output/: markdown.rs
src/persistence/: manifest.rs  mod.rs  storage.rs
tests/: review_api.rs
(+70 files in other folders)
