[package]
name = "tuicr"
version = "0.7.2"
edition = "2024"
description = "Review AI-generated diffs like a GitHub pull request, right from your terminal."
license = "MIT"
repository = "https://github.com/agavra/tuicr"
homepage = "https://github.com/agavra/tuicr"
readme = "README.md"
keywords = ["tui", "git", "code-review", "diff", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Git operations
git2 = { version = "0.20", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
directories = "6.0"
ureq = { version = "3", features = ["json"] }
unicode-width = "0.2"
uuid = { version = "1.0", features = ["v4"] }
arboard = { version = "3.4", features = ["wayland-data-control"] }
base64 = "0.22"
ignore = "0.4"

# Syntax highlighting
syntect = "5.2"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }

# IDE integration (Claude Code MCP protocol)
tokio = { version = "1", features = ["full", "sync", "net", "time", "fs"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
dirs = { version = "5.0", optional = true }

[features]
default = []
ide-integration = ["tokio", "tokio-tungstenite", "tungstenite", "futures-util", "dirs"]

[dev-dependencies]
tempfile = "3.24.0"
